add: use the queues structure of the emails consumer

--- a/.env
+++ b/.env
@@ -10,5 +10,12 @@ EMAIL_PASSWORD=tfcwzsyhtfilezrl
 EMAIL_FROM="Sistema Quejas Boyacá <quejasboyaca746@gmail.com>"
 EMAIL_TO=quejasboyaca746@gmail.com
 
+# Consumer Processing Configuration
+# Intervalo entre procesamiento de mensajes (en milisegundos)
+MESSAGE_PROCESSING_INTERVAL=10000
+
+# Intervalo de revisión cuando no hay mensajes (en milisegundos)
+IDLE_CHECK_INTERVAL=10000
+
 # Environment
 NODE_ENV=development
